test_suite/tests/ui/precondition/serialize_field_identifier.stderr
error: field identifiers cannot be serialized
 --> tests/ui/precondition/serialize_field_identifier.rs:4:1
  |
4 | / #[serde(field_identifier)]
5 | | enum F {
6 | |     A,
7 | |     B,
8 | | }
  | |_^
